--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
            </p>
         </div> 
         <div><img src="leisara-creative-studio-kNuSOBHBtmA-unsplash.jpg" alt="product image" class="image"></div>
+        <h2>i can push code on my github</h2>
+        <h3>new code changed</h3>
 
        </header>
     </div>
